kubernetes/cluster/smart-home/otbr/otbr.yaml
# Ref: https://openthread.io/guides/border-router/build-docker
---
apiVersion: v1
kind: Service
metadata:
  name: otbr
  namespace: smart-home
  labels:
    app.kubernetes.io/name: otbr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: api
    - protocol: TCP
      port: 8888
      targetPort: 8888
      name: webui
  selector:
    app.kubernetes.io/name: otbr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otbr
  namespace: smart-home
  labels:
    app.kubernetes.io/name: otbr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: otbr
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: smart-home
      labels:
        app.kubernetes.io/name: otbr
    spec:
      restartPolicy: Always
      containers:
        - name: otbr
          image: openthread/otbr:latest
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              memory: 250Mi
          ports:
            - containerPort: 8081
            - containerPort: 8088
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
            privileged: true
          # envFrom:
          #   - configMapRef:
          #       name: otbr
