kubernetes/cluster/smart-home/otbr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otbr
  namespace: smart-home
  labels:
    app.kubernetes.io/name: otbr
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: otbr.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: otbr
                port:
                  number: 8888
  tls:
    - hosts:
        - otbr.brhd.io
